# ChangeLog for app-accessibility/brltty
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.157 2014/12/04 23:03:28 teiresias Exp $

*brltty-5.2 (04 Dec 2014)

  04 Dec 2014; Christopher Brannon <teiresias@gentoo.org> +brltty-5.2.ebuild,
  +files/brltty-5.2-fix-ldflags.patch, +files/brltty-5.2-respect-AR.patch,
  +files/brltty-5.2-udev.patch:
  New upstream version.

  27 Nov 2014; Pacho Ramos <pacho@gentoo.org> brltty-5.0-r3.ebuild,
  brltty-5.1.ebuild:
  Support python 3.4

  29 Oct 2014; Tobias Klausmann <klausman@gentoo.org> brltty-5.0-r3.ebuild:
  Stable on alpha, bug 518990

  22 Sep 2014; Chema Alonso <nimiux@gentoo.org> brltty-5.0-r3.ebuild:
  Stable for amd64 wrt bug #518990

*brltty-5.1 (23 Aug 2014)

  23 Aug 2014; Christopher Brannon <teiresias@gentoo.org> +brltty-5.1.ebuild,
  +files/brltty-5.1-fix-ldflags.patch, +files/brltty-5.1-respect-AR.patch,
  +files/brltty-5.1-udev.patch:
  New upstream version.

  13 Aug 2014; Christopher Brannon <teiresias@gentoo.org> brltty-5.0-r3.ebuild:
  Fix building with +java USE flag.

  I broke it when I converted the ebuild to use python-r1.

  06 Aug 2014; Jeroen Roovers <jer@gentoo.org> brltty-5.0-r3.ebuild:
  Stable for HPPA (bug #518990).

*brltty-5.0-r3 (06 Jun 2014)

  06 Jun 2014; Christopher Brannon <teiresias@gentoo.org>
  +brltty-5.0-r3.ebuild:
  Use python-r1 eclass and support multiple versions of Python.

  Closes bug #511950.

  07 Apr 2014; Mike Frysinger <vapier@gentoo.org> brltty-4.5-r3.ebuild,
  brltty-5.0-r2.ebuild:
  Do not use `pkg-config` all the time.

  22 Feb 2014; Christopher Brannon <teiresias@gentoo.org> -brltty-4.2.ebuild,
  -brltty-4.2-r1.ebuild, -files/brltty-4.2-fix-a2.patch,
  -files/brltty-4.2-fix-ldflags.patch,
  -files/brltty-4.2-fix-ocaml-install.patch,
  -files/brltty-4.2-fix-svnversion.patch, -files/brltty-4.2-glibc-212.patch:
  Remove old versions.

*brltty-5.0-r2 (22 Feb 2014)
