@@ -23,19 +23,15 @@ DIST brltty-5.1.tar.xz 2226516 SHA256 d3482b44d431e4c352eed5116bde45af913b26d186
 DIST brltty-5.2.tar.xz 2532684 SHA256 f1293940317a675d0eaeaf3f363bbfe4bfaa5225c2116123a61ce2d3c71943f7 SHA512 8e16701e9c9d776c76e3ad0cb4319b2753295fea229bd3f60cb0dffc0b6946037e6f98daafae873238c4eff90d4b8ddb697b7d425e700c5a098aba8fed9eed3f WHIRLPOOL 33fcf326be381309f2baa3f59807145a0ca3a614f32b0b27e4b76af1c1f46f6459f7be1d629002538588ce71ab017b52bfc642fc06aa2c3f883aba272e61f20e
 EBUILD brltty-4.5-r3.ebuild 4414 SHA256 ca6a86a5ba9689093cb0fae2cdf6c080bc942e75ff2a3a469237e174680a5d83 SHA512 2d3a17f27e33c40ce8ba4ce74795ca82ed71d4229dd40b0efa564a89831a3e5e8da6bfb2343bac97123f6339d747d65a188eadf4dc2b34ec7f6a9f275780fb7f WHIRLPOOL a4bb274038287100f4bfe22c43de7885d6661ab1ba58727f11a66030021d686998dba8ec56a09de2d890a8f2585286a3210de2c5f91922f7a936c0bee21ece7d
 EBUILD brltty-5.0-r2.ebuild 4457 SHA256 5762e928bb2d1bc57b3cb2beeaa0d499a24d2414b6cb2aa4228188928a7f17c3 SHA512 44d3fd3c169104f7f8a0a3bde011ec9592c86f30ff784d9aae3f084070fe39b0403ac532dae623e997ac5d7fb2f9ba02ffdd8c208b05948b4342f8c305699cfc WHIRLPOOL 07fe45b13c9d132ccbd3dae12e6237cc1d709d4ec52fee8f4261403f1ac45c8b8dbb5d92b7fc16c7a0ac3ba1b0010ce814240dfa49539793b2d9c781ae3ded5f
-EBUILD brltty-5.0-r3.ebuild 5011 SHA256 3f5ccf799b102a5944d433108d2d0839b42d93628ab9eb7d93a0a26fbd00e0e9 SHA512 f2ff0b9367f5fb1642085c5b01edc900bba179a85ffc3b9112d56102d36ae8930fc78922037eaafe38daa64fe42efc41b93e177df5df4267092b7b2850ec3bf1 WHIRLPOOL e90c5c9f394b07316cbe4ea45f4eb71909c851ab745d42d5f4a3d2b04c58b72d4b3ab0c028e03ee90a8f9ca00b1fbe7a1cf32867b29ee90c3d8ca971127f1c4e
+EBUILD brltty-5.0-r3.ebuild 5010 SHA256 596fada39c914e4d649d23d1da1afa29f4ed680bf9f188c055fe90ae99e42e4b SHA512 b0faff807aaa70bef906278dd382ba673e18c266e6d0d6c8ebd27247b66fe085f681419ade94dc0e3012dd471c7844678e4efe8c7d95bf01f3b4597ff46b1880 WHIRLPOOL 3010d39a993d26c18b18eb1bde1b3a141a67da92dfc841635175e4f63870fbf7914121f9e95fed33d414a34e3e12af7aaf84e20e72000ef6f649867ad2bfdc0d
 EBUILD brltty-5.1.ebuild 5068 SHA256 45f582211329aef178ae196ed13c59a7a4510bd600ca17930f8ddc9b8deccee9 SHA512 afba2870b2be80fc97b757e4ec1fe619a56135c61bb3c42879a573b4c10fd92c1b0e2263c2bd796abca971312876438c3754b0e76b65511809f21119ea7b79ec WHIRLPOOL 75936256311145154e9029a25e22bd18c90aa1340493d68b2c5d125a0861707ec4d87317f2462a62ecc4eb03d7301ff1830bda83d39b5991c8a0b7f32393e4ff
 EBUILD brltty-5.2.ebuild 5072 SHA256 432f1807c29d95e1aa6d752691242bb095c877c23c6d48f5e35f587da7191f00 SHA512 ce7e9b749d402eb7bedec6595deccdd12fc447e00b39e7517da01fdc886189ca59f6efddf694d8b7e1baaa6acd4c372e6bebba023561b4c5bc4baf070d42fbae WHIRLPOOL 465f0df3426440472c5b94e87283b5913c89ef4baab8fca196662bac3010ea2cd1e951a37c4669fa0fbba931dabb3baec755b43c3308efa1f210e841b6bec032
-MISC ChangeLog 21086 SHA256 01ae2a39959e7fdc9f4323168ee2ec3fd56e243938d12360dbd139484ff38f52 SHA512 40e63de0ced0cdb640e6888cfc438b43ec5b1912a87c15e202399b99b369e0bf09d2c200c8ffbd5dc60ed42efdc20b35419b485c067c33279ee8af69c81ec6e9 WHIRLPOOL a8b41028543331b2c1e031b7d4d233b1a65c24c8e9896245bf8754fd4989dfd17c9ef966a6d49907f6c2d03eee3b8035755f16a52c55f4cae7c64e4ef8bcb1eb
+MISC ChangeLog 21177 SHA256 d1b8f2a84194176640a9417a5aab572ad73ed88a4d4c1597203d7c9f4f8cea09 SHA512 fad41a6eccd04f0faf3868e16a425fe83c1411b5ca5e483437ee29e9558a8c04381f7e52b99fcea9b4cee17211b9c709185a7f59754b69c181ccfdfd55aad0ec WHIRLPOOL 0fad38a0e9a41bba6f53e41022f285839ce399c9e672176a3162a7c95dd91a71bbd8a2a82e5b3d6e79a2fad6c049b256c5ad173b1c7e1d2053fcc0cb63070dec
 MISC metadata.xml 1918 SHA256 5cdd92581b4e46c8dc3c468f51bf04dd5456dbddc1f4f88fef47879953f35d88 SHA512 0dd12af812f22da964152898a256c957e2074d1ae9eb2f8dd471f8f3cfb0016439271636759b622756d67f0eadfc5f062556ff5f85be4445c03dc5fe097814e4 WHIRLPOOL 1c232cc5d306a62507be40fd18552a284e87ae2a10e920d4cc3886ea59e4bc075a0ce9636eb15f6d59fb07bfc29cf5b503b87b8425a275b079d4e91ffdf2ec78
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUgOhBAAoJEH8qFnJlIeBtYzMH/0H0FBgCeczK0TPb91pO4IST
-Cyg8Y62HH41V4DhSN5SDnxDkBBuy1kltedCvQYaUE/MztMkSOLtNUQ6tYBJBaWyg
-0S4DQnwGSJfUdkHE6xB/rSnWYvny4uVapmQ4QSu1wh0aJFBPRbo9n6XGnHkG9TVB
-3E/ibcJHliz+56m9S66TmVrFTOfONzoZBygP6xWgIr7BBn4TWrIodliAh8lduIGO
-+bJRPyvQ+95NicvGw70yvM+KAoQq+cHBbTHONlLi6hh3Q+71bdlevVyGtZe0oUVJ
-G+DguX949OEikwrK8NKumgUUe3r6AUiEowIB2mknOZDQS0gT9f1lM4j8Z+c0SpE=
-=ElHe
+iEYEAREIAAYFAlSPCxoACgkQCaWpQKGI+9SDZgCeIiPexnnJY2MyE1LmCibcs89k
+HgIAn2g7N3zK5XV6GzHMGynk7LVh1Rk6
+=3KNU
 -----END PGP SIGNATURE-----
