@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX findlib.patch 645 SHA256 68e6dbe7c2d67e4590949cd1321de9fdd4952c051a9b162f162649c42c0a95b9 SHA512 4f5172bc7d603375bda331d40708ad14e7e9e7374f97cbd11da56473ca704421f7c801559dbcc753fe8004a809b80142158974a1c5c469eb2894580121cc9442 WHIRLPOOL 3fe3567cdb7c51171d60ba2005a547baddf38dbdb32a9d72323e7c94efcdace89ceabd8363ad755d7d6bd9379613a7928e0942b4d70f1517f8518f50dad74079
 DIST labltk-8.06.0.tar.gz 368790 SHA256 71997dbd6c36e4eb064484dc73037d4bd10e465e180fead07a4b193d21af9764 SHA512 c005f8c177bca982a39bfcfd9d77640bedf7e4cc3a6690fc01fa2a8ebedcfb30ad3677501400ae2e0e276eb13fdd565319e23bb02dce84d78257ae7fbe545f47 WHIRLPOOL e231527f1403fbe9aa1102d0a6bc444df0ce5806e64ce8d1323100580767e823922db0713c0d3423f79ff2e82e162673486160953aaea4ff188b5ae666ea4445
-EBUILD labltk-8.06.0.ebuild 1092 SHA256 e97edac497f3028b031ea86ab42ed66687534e7d711db7814d35624ad42f2379 SHA512 26bfa97285e82dd169df22538f2dd58abdc649f8da2ff72018c97c06018425d4fc8d876f990e41b39941f0de8f8a91358d4e79205d57f78c2337d698df78c4f5 WHIRLPOOL c2f6ebfb4521026963c53a6db5391f44642137ddfe494dc46a34ee017c0c3875fcecab031da6dda337701ef01c80c6cd454466195d4cae87a5b909b37c647d32
-MISC ChangeLog 608 SHA256 c39a6c1bb30708d29229cc0a789b699c05256b703c548a1faa782c904a8429b6 SHA512 cccf5b26b0e798d17225f102308564b02001653bb30360c10ea8c419bf1a0b9dc02e520dd7662cbcfa468af23c634d27d24630231f928bcd45de34bf78a18da4 WHIRLPOOL 77371d59b2457a430aeee270ef45bdd3f23bbceeda28b6df1556d0d8c74edfb5ecb14a09b89170a73bbb0dcd0bcc6a7139d4c4bae35e945e152c026e5ff50e12
+EBUILD labltk-8.06.0.ebuild 1102 SHA256 34d501573467581ee46665f90b05aab692c42d68a5127b1c0f95163fa25d8f1e SHA512 e148b071d4b453e6de01adeb973ae6feebe5202e25307d2f89db9efd5b1ebf2c17359de847af17f85d2e453c0d2905a324ba716ffe0a96997fbc827e6233ba50 WHIRLPOOL f97e23565a99cd6ee0656bb654e174c23b6b0755386effd28d91dbb7b6c3db827392f95312274fdc68ebd20364bc059bc17adc2bb7f545e976c1762e814366e3
+MISC ChangeLog 775 SHA256 e096d3723fcc13d84b6f34444fc1cad56571f327c6a2eec72a0c0de1c72ebc4f SHA512 8eafdb7ffdfc592b984c1b088b5f8095d2d065acfe92dd7bf5c6d8af9fb6efca9f25cd5eba399565cae2149b5844a4f795c0537362db681f175708f1e97bb85d WHIRLPOOL 1a2f7dc464ae07f19f89a734f5fb083a5414586c01e8621d594147f848464fa7f7d2a190ff590ff9ae05f1091309e38af8f8a892b312eab06ebebd29d9f8b72f
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlR4p7gACgkQvFcC4BYPU0pSZQCgl4rXaCXd4NEDxdhUM9kb/DW1
-ZzEAniYYQ8D4M59dpzhvWlS4/ho32VYc
-=hCWY
+iEYEAREIAAYFAlSPCvIACgkQvFcC4BYPU0pAEwCgu88bOrSF2JtIopFxe7CB6HUx
+qIkAn3qqk3EVymgA86IeazxrhF4HHhEB
+=EL+r
 -----END PGP SIGNATURE-----
