@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/labltk/labltk-8.06.0.ebuild,v 1.3 2014/11/28 16:49:59 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/labltk/labltk-8.06.0.ebuild,v 1.4 2014/12/15 16:23:13 aballier Exp $
 
 EAPI=5
 
@@ -25,7 +25,7 @@ src_prepare() {
 }
 
 src_configure() {
-	./configure --use-findlib || die "configure failed!"
+	./configure --use-findlib --verbose || die "configure failed!"
 }
 
 src_compile() {
