@@ -4,11 +4,11 @@ DESCRIPTION=Daemon that provides access to the Linux/Unix console for a blind pe
 EAPI=5
 HOMEPAGE=http://mielke.cc/brltty/
 IUSE=+api +beeper bluetooth +contracted-braille doc +fm gpm iconv icu java +midi ncurses nls ocaml +pcm python usb +speech tcl X elibc_FreeBSD java python_targets_python2_7 python_targets_python3_3 python_targets_python3_4
-KEYWORDS=alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~x86
+KEYWORDS=alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 x86
 LICENSE=GPL-2 LGPL-2.1
 RDEPEND=java? ( >=virtual/jre-1.4 ) bluetooth? ( net-wireless/bluez ) gpm? ( >=sys-libs/gpm-1.20 ) iconv? ( virtual/libiconv ) icu? ( dev-libs/icu:= ) python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-)] ) ncurses? ( sys-libs/ncurses ) nls? ( virtual/libintl ) tcl? ( >=dev-lang/tcl-8.4.15 ) usb? ( virtual/libusb:0 ) X? ( x11-libs/libXaw ) java? ( >=dev-java/java-config-2.1.9-r1 )
 REQUIRED_USE=doc? ( api ) java? ( api ) ocaml? ( api ) python? ( api ) tcl? ( api )
 SLOT=0
 SRC_URI=http://mielke.cc/brltty/archive/brltty-5.0.tar.xz
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	eutils	6faef4c127028ccbba3a11400d24ae34	findlib	9cf6020ee5481f39f1aa566a323f9868	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-r1	a2dac9ffff107078f25147aac958a68f	python-utils-r1	d5328656d500f65898a5f51634722f61	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	udev	da001465a2e939c93f7ae16947ce3438	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=cec492ca8731a8ea4edba5e73b7ce0f2
+_md5_=320cac362b8da302eef404e843665000
