@@ -1,6 +1,10 @@
 # ChangeLog for dev-ml/labltk
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/labltk/ChangeLog,v 1.3 2014/11/28 16:49:59 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/labltk/ChangeLog,v 1.4 2014/12/15 16:23:13 aballier Exp $
+
+  15 Dec 2014; Alexis Ballier <aballier@gentoo.org> labltk-8.06.0.ebuild:
+  run configure with --verbose, it is not much more verbose but at least tells
+  a bit more
 
   28 Nov 2014; Alexis Ballier <aballier@gentoo.org> labltk-8.06.0.ebuild:
   add subslot
