@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9619 2014/12/15 16:00:14 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9620 2014/12/15 16:03:22 pacho Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Dec 2014; Pacho Ramos <pacho@gentoo.org> package.mask:
+  Drop now obsoleted mask
 
   15 Dec 2014; Pacho Ramos <pacho@gentoo.org> package.mask:
   There is no need to hardmask folks at this point
