@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/brltty
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.157 2014/12/04 23:03:28 teiresias Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.158 2014/12/15 16:23:49 pacho Exp $
+
+  15 Dec 2014; Pacho Ramos <pacho@gentoo.org> brltty-5.0-r3.ebuild:
+  x86 stable, bug #518990
 
 *brltty-5.2 (04 Dec 2014)
 
